manifests/iot-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/default-backend: trackingapp
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - freightpeople-iot-api.australiasoutheast.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: freightpeople-iot-api.australiasoutheast.cloudapp.azure.com
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: iot-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trackingapp
                port:
                  number: 3000
